sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:45: error: forward reference extends over definition of variable nbBases
  deplacerTrou((depart+1)%nbBases, 0, -1);
                          ^